# pydal

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  VERSION  appveyor.yml  pyproject.toml  setup.cfg  setup.py  shell.nix  test-requirements.txt  test.py  tox.ini
.github/workflows/: run_test.yaml
docs/: conf.py  pydal.adapters.rst
pydal/: .gitignore  __init__.py  _compat.py  _gae.py  _globals.py  _load.py  ast.py  ast_translate.py  backend_base.py  base.py  connection.py  dbapi.py  default_validators.py  driver.py  drivers.py  exceptions.py  migrator.py  ndb.py  objects.py  querybuilder.py  restapi.py  scheduler.py  utils.py  validators.py
pydal/adapters/: __init__.py  base.py  couchdb.py  cubrid.py  db2.py  firebird.py  google.py  google_adapters.py  imap.py  informix.py  ingres.py  mongo.py  mssql.py  mysql.py  ndb.py  none.py  oracle.py  postgres.py  sap.py  sapdb.py  snowflake.py  sqlite.py  teradata.py
pydal/backends/: __init__.py  couchdb.py  db2.py  firebird.py  google.py  informix.py  ingres.py  mongo.py  mssql.py  mysql.py  oracle.py  postgres.py  sap.py  snowflake.py  sqlite.py  teradata.py
pydal/compilers/: __init__.py  sql.py  sqlite.py
pydal/contrib/: imap_adapter.py  ipaddress.py  mockimaplib.py  ordereddict.py  portalocker.py  reserved_sql_keywords.py
pydal/dialects/: __init__.py  base.py  couchdb.py  db2.py  firebird.py  google.py  informix.py  ingres.py  mongo.py  mssql.py  mysql.py  ndb.py  oracle.py  postgre.py  sap.py  snowflake.py  sqlite.py  teradata.py
pydal/helpers/: __init__.py  _internals.py  classes.py  gae.py  methods.py  regex.py  rest.py  serializers.py  utils.py
pydal/parsers/: __init__.py  base.py  google.py  mongo.py  ndb.py  oracle.py  postgre.py  sqlite.py
pydal/representers/: __init__.py  base.py  couchdb.py  db2.py  google.py  informix.py  mongo.py  mssql.py  mysql.py  ndb.py  oracle.py  postgre.py  sqlite.py
pydal/tools/: __init__.py  scheduler.py  tags.py
tests/: __init__.py  _adapt.py  _helpers.py  ast_advanced.py  ast_compile.py  ast_joins.py  ast_params.py  ast_statements.py  ast_subselect.py  ast_translate.py  base.py  caching.py  contribs.py  cross_dialect.py  dbapi.py  driver_io.py  indexes.py  is_url_validators.py  nosql.py  querybuilder.py  restapi.py  scheduler.py  smart_query.py  sql.py  tags.py  test_smart_query.py  tier2_units.py  tier4_units.py  tier5_units.py  validation.py  validators.py
