[aliases]
release = egg_info -RDb ''

[wheel]
universal = 1

[metadata]
name             = pyDAL
version          = '0.12.25'
url              = http://https://github.com/web2py/pydal
license          = BSD
author           = Massimo Di Pierro
author_email     = mdipierro@cs.depaul.edu
maintainer       = Giovanni Barillari
maintainer_email = gi0baro@d4net.org
description      = a pure Python Database Abstraction Layer'
